# clip-organiser

./: .gitignore  Cargo.toml
src/: error.rs  lib.rs  videoclip.rs
src/utils/: config.rs  logger.rs
